--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ solution: Vz.AgentEngagement.sln
 mono:
   - latest
 script: 
-   - mono /Tools/xunit.console.exe Vz.AgentEngagement.Tests/bin/Debug/Vz.AgentEngagement.Tests.dllr
+   - mono /Tools/xunit.console.exe Vz.AgentEngagement.Tests/bin/Debug/Vz.AgentEngagement.Tests.dll
