--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ deploy:
    username: hariraj@gmail.com
    password: Vishwak05
    api: https://api.run.pivotal.io
-   organization: CMB
-   space: Development
+   organization: Hackathon
+   space: development
